feat: add comprehensive accessibility support for screen reader users
Add screen reader accessibility, keyboard navigation, and high contrast
theme support across the entire application.

Screen Reader Support:
- AutomationProperties.Name on all interactive controls (buttons, toggles,
  checkboxes, comboboxes, data grids, progress bars, search box)
- AutomationProperties.ItemStatus for collapsible section state announcements
- AutomationProperties.LiveSetting for loading screens and task progress
- 26 Accessibility_* localization keys across all 23 language files

Keyboard Navigation:
- Keyboard equivalents (Enter/Space) for all mouse-only interactions:
  collapsible headers, category headers, tab switching, WIM wizard steps,
  lock overlay, config import option cards
- Focus trapping (Tab cycling) in all 6 dialog windows
- FocusVisualStyle on all focusable elements (buttons, checkboxes,
  comboboxes, toggles, borders, content controls)
- DirectionalNavigation on DataGrids
- Visible DataGrid cell focus indicator

High Contrast Theme:
- Extend ThemeManager with automatic Windows High Contrast mode detection
- SystemColors-based palette (28 color mappings) applied when HC is active
- Runtime detection via SystemParameters.StaticPropertyChanged listener
- Focus visuals auto-adapt via existing DynamicResource chain

Files changed: 53 (30 XAML views/styles, 2 C# code-behind, 1 ThemeManager,
20+ localization JSON files)

--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -1,7 +1,7 @@
-{
+﻿{
   "App_Title": "Winhance",
   "App_By": "deur Memory",
-  "Nav_SoftwareAndApps": "Sagteware \u0026 Toepassings",
+  "Nav_SoftwareAndApps": "Sagteware & Toepassings",
   "Nav_Optimize": "Optimaliseer",
   "Nav_Customize": "Pasmaak",
   "Nav_AdvancedTools": "Gevorderde Nutsmiddels",
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Kan nie installasiestatus bepaal nie. Koppel aan die internet en klik die Verfris-knoppie.",
   "Error_NoInternetConnection": "Geen internetverbinding nie. Koppel asseblief en probeer weer.",
   "Error_WinGetInstallFailed": "Kon nie WinGet installeer nie. Gaan asseblief u internetverbinding na.",
-  "Error_WinGetNotAvailable": "WinGet is nie beskikbaar op hierdie stelsel nie."
+  "Error_WinGetNotAvailable": "WinGet is nie beskikbaar op hierdie stelsel nie.",
+  "Accessibility_SaveConfiguration": "Stoor konfigurasie",
+  "Accessibility_ImportConfiguration": "Voer konfigurasie in",
+  "Accessibility_WindowsVersionFilter": "Windows-weergawefilter",
+  "Accessibility_Donate": "Skenk",
+  "Accessibility_ReportBug": "Rapporteer 'n fout",
+  "Accessibility_MinimizeWindow": "Minimeer venster",
+  "Accessibility_MaximizeWindow": "Maksimeer venster",
+  "Accessibility_RestoreWindow": "Herstel venster",
+  "Accessibility_CloseWindow": "Sluit venster",
+  "Accessibility_CloseDialog": "Sluit dialoog",
+  "Accessibility_SearchSettings": "Soek instellings",
+  "Accessibility_ClearSearch": "Maak soektog skoon",
+  "Accessibility_NavigateToSection": "Navigeer na {0}",
+  "Accessibility_TaskProgress": "Taak in werking",
+  "Accessibility_CancelTask": "Kanselleer taak",
+  "Accessibility_SelectAll": "Kies alles",
+  "Accessibility_SelectApp": "Kies {0}",
+  "Accessibility_WindowsAppsTable": "Windows-toepassingslys",
+  "Accessibility_ExternalAppsTable": "Eksterne toepassingslys",
+  "Accessibility_VisitWebsite": "Besoek webwerf vir {0}",
+  "Accessibility_ImportOwnConfig": "Voer jou eie konfigurasielêer in",
+  "Accessibility_ImportRecommendedConfig": "Voer aanbevole konfigurasie in",
+  "Accessibility_UnlockSetting": "Ontsluit gevorderde instelling",
+  "Accessibility_WindowsAppsTab": "Windows-toepassings-oortjie",
+  "Accessibility_ExternalAppsTab": "Eksterne toepassings-oortjie",
+  "Accessibility_Loading": "Laai"
 }
