--- a/src/Winhance.WPF/Localization/cs.json
+++ b/src/Winhance.WPF/Localization/cs.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Nelze zjistit stav instalace. Připojte se k internetu a klikněte na tlačítko Obnovit.",
   "Error_NoInternetConnection": "Žádné připojení k internetu. Připojte se prosím a zkuste to znovu.",
   "Error_WinGetInstallFailed": "Nepodařilo se nainstalovat WinGet. Zkontrolujte prosím své připojení k internetu.",
-  "Error_WinGetNotAvailable": "WinGet není v tomto systému k dispozici."
+  "Error_WinGetNotAvailable": "WinGet není v tomto systému k dispozici.",
+  "Accessibility_SaveConfiguration": "Uložit konfiguraci",
+  "Accessibility_ImportConfiguration": "Importovat konfiguraci",
+  "Accessibility_WindowsVersionFilter": "Filtr verze Windows",
+  "Accessibility_Donate": "Přispět",
+  "Accessibility_ReportBug": "Nahlásit chybu",
+  "Accessibility_MinimizeWindow": "Minimalizovat okno",
+  "Accessibility_MaximizeWindow": "Maximalizovat okno",
+  "Accessibility_RestoreWindow": "Obnovit okno",
+  "Accessibility_CloseWindow": "Zavřít okno",
+  "Accessibility_CloseDialog": "Zavřít dialog",
+  "Accessibility_SearchSettings": "Hledat nastavení",
+  "Accessibility_ClearSearch": "Vymazat hledání",
+  "Accessibility_NavigateToSection": "Přejít na {0}",
+  "Accessibility_TaskProgress": "Probíhá úloha",
+  "Accessibility_CancelTask": "Zrušit úlohu",
+  "Accessibility_SelectAll": "Vybrat vše",
+  "Accessibility_SelectApp": "Vybrat {0}",
+  "Accessibility_WindowsAppsTable": "Seznam aplikací Windows",
+  "Accessibility_ExternalAppsTable": "Seznam externích aplikací",
+  "Accessibility_VisitWebsite": "Navštívit web {0}",
+  "Accessibility_ImportOwnConfig": "Importovat vlastní konfigurační soubor",
+  "Accessibility_ImportRecommendedConfig": "Importovat doporučenou konfiguraci",
+  "Accessibility_UnlockSetting": "Odemknout pokročilé nastavení",
+  "Accessibility_WindowsAppsTab": "Karta aplikací Windows",
+  "Accessibility_ExternalAppsTab": "Karta externích aplikací",
+  "Accessibility_Loading": "Načítání"
 }
