--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -1402,5 +1402,32 @@
   "Button_Unlock": "Unlock",
   "Common_ClickToUnlock": "Click to unlock",
   "Setting_taskbar-copilot_Name": "Copilot Preview Button",
-  "Setting_taskbar-copilot_Description": "Show or hide the Copilot Preview button on the taskbar"
+  "Setting_taskbar-copilot_Description": "Show or hide the Copilot Preview button on the taskbar",
+
+  "Accessibility_SaveConfiguration": "Save configuration",
+  "Accessibility_ImportConfiguration": "Import configuration",
+  "Accessibility_WindowsVersionFilter": "Windows version filter",
+  "Accessibility_Donate": "Donate",
+  "Accessibility_ReportBug": "Report a bug",
+  "Accessibility_MinimizeWindow": "Minimize window",
+  "Accessibility_MaximizeWindow": "Maximize window",
+  "Accessibility_RestoreWindow": "Restore window",
+  "Accessibility_CloseWindow": "Close window",
+  "Accessibility_CloseDialog": "Close dialog",
+  "Accessibility_SearchSettings": "Search settings",
+  "Accessibility_ClearSearch": "Clear search",
+  "Accessibility_NavigateToSection": "Navigate to {0}",
+  "Accessibility_TaskProgress": "Task in progress",
+  "Accessibility_CancelTask": "Cancel task",
+  "Accessibility_SelectAll": "Select all",
+  "Accessibility_SelectApp": "Select {0}",
+  "Accessibility_WindowsAppsTable": "Windows apps list",
+  "Accessibility_ExternalAppsTable": "External apps list",
+  "Accessibility_VisitWebsite": "Visit website for {0}",
+  "Accessibility_ImportOwnConfig": "Import your own configuration file",
+  "Accessibility_ImportRecommendedConfig": "Import recommended configuration",
+  "Accessibility_UnlockSetting": "Unlock advanced setting",
+  "Accessibility_WindowsAppsTab": "Windows apps tab",
+  "Accessibility_ExternalAppsTab": "External apps tab",
+  "Accessibility_Loading": "Loading"
 }
