--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "No se puede determinar el estado de la instalación. Conéctese a Internet y haga clic en el botón Actualizar.",
   "Error_NoInternetConnection": "No hay conexión a Internet. Por favor, conéctese e inténtelo de nuevo.",
   "Error_WinGetInstallFailed": "Error al instalar WinGet. Por favor, compruebe su conexión a Internet.",
-  "Error_WinGetNotAvailable": "WinGet no está disponible en este sistema."
+  "Error_WinGetNotAvailable": "WinGet no está disponible en este sistema.",
+  "Accessibility_SaveConfiguration": "Guardar configuración",
+  "Accessibility_ImportConfiguration": "Importar configuración",
+  "Accessibility_WindowsVersionFilter": "Filtro de versión de Windows",
+  "Accessibility_Donate": "Donar",
+  "Accessibility_ReportBug": "Reportar un error",
+  "Accessibility_MinimizeWindow": "Minimizar ventana",
+  "Accessibility_MaximizeWindow": "Maximizar ventana",
+  "Accessibility_RestoreWindow": "Restaurar ventana",
+  "Accessibility_CloseWindow": "Cerrar ventana",
+  "Accessibility_CloseDialog": "Cerrar diálogo",
+  "Accessibility_SearchSettings": "Buscar configuración",
+  "Accessibility_ClearSearch": "Borrar búsqueda",
+  "Accessibility_NavigateToSection": "Navegar a {0}",
+  "Accessibility_TaskProgress": "Tarea en progreso",
+  "Accessibility_CancelTask": "Cancelar tarea",
+  "Accessibility_SelectAll": "Seleccionar todo",
+  "Accessibility_SelectApp": "Seleccionar {0}",
+  "Accessibility_WindowsAppsTable": "Lista de aplicaciones de Windows",
+  "Accessibility_ExternalAppsTable": "Lista de aplicaciones externas",
+  "Accessibility_VisitWebsite": "Visitar sitio web de {0}",
+  "Accessibility_ImportOwnConfig": "Importar su propio archivo de configuración",
+  "Accessibility_ImportRecommendedConfig": "Importar configuración recomendada",
+  "Accessibility_UnlockSetting": "Desbloquear configuración avanzada",
+  "Accessibility_WindowsAppsTab": "Pestaña de aplicaciones de Windows",
+  "Accessibility_ExternalAppsTab": "Pestaña de aplicaciones externas",
+  "Accessibility_Loading": "Cargando"
 }
