--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Impossible de déterminer l'état de l'installation. Connectez-vous à Internet et cliquez sur le bouton Actualiser.",
   "Error_NoInternetConnection": "Pas de connexion Internet. Veuillez vous connecter et réessayer.",
   "Error_WinGetInstallFailed": "Échec de l'installation de WinGet. Veuillez vérifier votre connexion Internet.",
-  "Error_WinGetNotAvailable": "WinGet n'est pas disponible sur ce système."
+  "Error_WinGetNotAvailable": "WinGet n'est pas disponible sur ce système.",
+  "Accessibility_SaveConfiguration": "Enregistrer la configuration",
+  "Accessibility_ImportConfiguration": "Importer la configuration",
+  "Accessibility_WindowsVersionFilter": "Filtre de version Windows",
+  "Accessibility_Donate": "Faire un don",
+  "Accessibility_ReportBug": "Signaler un bug",
+  "Accessibility_MinimizeWindow": "Réduire la fenêtre",
+  "Accessibility_MaximizeWindow": "Agrandir la fenêtre",
+  "Accessibility_RestoreWindow": "Restaurer la fenêtre",
+  "Accessibility_CloseWindow": "Fermer la fenêtre",
+  "Accessibility_CloseDialog": "Fermer le dialogue",
+  "Accessibility_SearchSettings": "Rechercher des paramètres",
+  "Accessibility_ClearSearch": "Effacer la recherche",
+  "Accessibility_NavigateToSection": "Naviguer vers {0}",
+  "Accessibility_TaskProgress": "Tâche en cours",
+  "Accessibility_CancelTask": "Annuler la tâche",
+  "Accessibility_SelectAll": "Tout sélectionner",
+  "Accessibility_SelectApp": "Sélectionner {0}",
+  "Accessibility_WindowsAppsTable": "Liste des applications Windows",
+  "Accessibility_ExternalAppsTable": "Liste des applications externes",
+  "Accessibility_VisitWebsite": "Visiter le site web de {0}",
+  "Accessibility_ImportOwnConfig": "Importer votre propre fichier de configuration",
+  "Accessibility_ImportRecommendedConfig": "Importer la configuration recommandée",
+  "Accessibility_UnlockSetting": "Déverrouiller le paramètre avancé",
+  "Accessibility_WindowsAppsTab": "Onglet applications Windows",
+  "Accessibility_ExternalAppsTab": "Onglet applications externes",
+  "Accessibility_Loading": "Chargement"
 }
