--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "इंस्टॉलेशन स्थिति निर्धारित करने में असमर्थ। इंटरनेट से कनेक्ट करें और रिफ्रेश बटन पर क्लिक करें।",
   "Error_NoInternetConnection": "कोई इंटरनेट कनेक्शन नहीं। कृपया कनेक्ट करें और पुनः प्रयास करें।",
   "Error_WinGetInstallFailed": "WinGet इंस्टॉल करने में विफल। कृपया अपना इंटरनेट कनेक्शन जांचें।",
-  "Error_WinGetNotAvailable": "WinGet इस सिस्टम पर उपलब्ध नहीं है।"
+  "Error_WinGetNotAvailable": "WinGet इस सिस्टम पर उपलब्ध नहीं है।",
+  "Accessibility_SaveConfiguration": "कॉन्फ़िगरेशन सहेजें",
+  "Accessibility_ImportConfiguration": "कॉन्फ़िगरेशन आयात करें",
+  "Accessibility_WindowsVersionFilter": "विंडोज़ संस्करण फ़िल्टर",
+  "Accessibility_Donate": "दान करें",
+  "Accessibility_ReportBug": "बग रिपोर्ट करें",
+  "Accessibility_MinimizeWindow": "विंडो छोटी करें",
+  "Accessibility_MaximizeWindow": "विंडो बड़ी करें",
+  "Accessibility_RestoreWindow": "विंडो पुनर्स्थापित करें",
+  "Accessibility_CloseWindow": "विंडो बंद करें",
+  "Accessibility_CloseDialog": "डायलॉग बंद करें",
+  "Accessibility_SearchSettings": "सेटिंग्स खोजें",
+  "Accessibility_ClearSearch": "खोज साफ़ करें",
+  "Accessibility_NavigateToSection": "{0} पर जाएं",
+  "Accessibility_TaskProgress": "कार्य प्रगति पर",
+  "Accessibility_CancelTask": "कार्य रद्द करें",
+  "Accessibility_SelectAll": "सभी का चयन करें",
+  "Accessibility_SelectApp": "{0} चुनें",
+  "Accessibility_WindowsAppsTable": "विंडोज़ ऐप्स सूची",
+  "Accessibility_ExternalAppsTable": "बाहरी ऐप्स सूची",
+  "Accessibility_VisitWebsite": "{0} की वेबसाइट पर जाएं",
+  "Accessibility_ImportOwnConfig": "अपनी कॉन्फ़िगरेशन फ़ाइल आयात करें",
+  "Accessibility_ImportRecommendedConfig": "अनुशंसित कॉन्फ़िगरेशन आयात करें",
+  "Accessibility_UnlockSetting": "उन्नत सेटिंग अनलॉक करें",
+  "Accessibility_WindowsAppsTab": "विंडोज़ ऐप्स टैब",
+  "Accessibility_ExternalAppsTab": "बाहरी ऐप्स टैब",
+  "Accessibility_Loading": "लोड हो रहा है"
 }
