--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Impossibile determinare lo stato dell'installazione. Connettiti a Internet e fai clic sul pulsante Aggiorna.",
   "Error_NoInternetConnection": "Nessuna connessione Internet. Connettiti e riprova.",
   "Error_WinGetInstallFailed": "Impossibile installare WinGet. Controlla la tua connessione Internet.",
-  "Error_WinGetNotAvailable": "WinGet non è disponibile su questo sistema."
+  "Error_WinGetNotAvailable": "WinGet non è disponibile su questo sistema.",
+  "Accessibility_SaveConfiguration": "Salva configurazione",
+  "Accessibility_ImportConfiguration": "Importa configurazione",
+  "Accessibility_WindowsVersionFilter": "Filtro versione Windows",
+  "Accessibility_Donate": "Dona",
+  "Accessibility_ReportBug": "Segnala un bug",
+  "Accessibility_MinimizeWindow": "Riduci a icona la finestra",
+  "Accessibility_MaximizeWindow": "Massimizza la finestra",
+  "Accessibility_RestoreWindow": "Ripristina la finestra",
+  "Accessibility_CloseWindow": "Chiudi la finestra",
+  "Accessibility_CloseDialog": "Chiudi il dialogo",
+  "Accessibility_SearchSettings": "Cerca impostazioni",
+  "Accessibility_ClearSearch": "Cancella ricerca",
+  "Accessibility_NavigateToSection": "Vai a {0}",
+  "Accessibility_TaskProgress": "Attività in corso",
+  "Accessibility_CancelTask": "Annulla attività",
+  "Accessibility_SelectAll": "Seleziona tutto",
+  "Accessibility_SelectApp": "Seleziona {0}",
+  "Accessibility_WindowsAppsTable": "Elenco app di Windows",
+  "Accessibility_ExternalAppsTable": "Elenco app esterne",
+  "Accessibility_VisitWebsite": "Visita il sito web di {0}",
+  "Accessibility_ImportOwnConfig": "Importa il tuo file di configurazione",
+  "Accessibility_ImportRecommendedConfig": "Importa configurazione consigliata",
+  "Accessibility_UnlockSetting": "Sblocca impostazione avanzata",
+  "Accessibility_WindowsAppsTab": "Scheda app di Windows",
+  "Accessibility_ExternalAppsTab": "Scheda app esterne",
+  "Accessibility_Loading": "Caricamento"
 }
