--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "インストールの状態を確認できません。インターネットに接続して、更新ボタンをクリックしてください。",
   "Error_NoInternetConnection": "インターネットに接続されていません。接続してもう一度お試しください。",
   "Error_WinGetInstallFailed": "WinGet のインストールに失敗しました。インターネット接続を確認してください。",
-  "Error_WinGetNotAvailable": "WinGet はこのシステムでは利用できません。"
+  "Error_WinGetNotAvailable": "WinGet はこのシステムでは利用できません。",
+  "Accessibility_SaveConfiguration": "構成を保存",
+  "Accessibility_ImportConfiguration": "構成をインポート",
+  "Accessibility_WindowsVersionFilter": "Windowsバージョンフィルター",
+  "Accessibility_Donate": "寄付",
+  "Accessibility_ReportBug": "バグを報告",
+  "Accessibility_MinimizeWindow": "ウィンドウを最小化",
+  "Accessibility_MaximizeWindow": "ウィンドウを最大化",
+  "Accessibility_RestoreWindow": "ウィンドウを復元",
+  "Accessibility_CloseWindow": "ウィンドウを閉じる",
+  "Accessibility_CloseDialog": "ダイアログを閉じる",
+  "Accessibility_SearchSettings": "設定を検索",
+  "Accessibility_ClearSearch": "検索をクリア",
+  "Accessibility_NavigateToSection": "{0}に移動",
+  "Accessibility_TaskProgress": "タスク実行中",
+  "Accessibility_CancelTask": "タスクをキャンセル",
+  "Accessibility_SelectAll": "すべて選択",
+  "Accessibility_SelectApp": "{0} を選択",
+  "Accessibility_WindowsAppsTable": "Windowsアプリ一覧",
+  "Accessibility_ExternalAppsTable": "外部アプリ一覧",
+  "Accessibility_VisitWebsite": "{0} のウェブサイトにアクセス",
+  "Accessibility_ImportOwnConfig": "自分の設定ファイルをインポート",
+  "Accessibility_ImportRecommendedConfig": "推奨設定をインポート",
+  "Accessibility_UnlockSetting": "詳細設定のロックを解除",
+  "Accessibility_WindowsAppsTab": "Windowsアプリタブ",
+  "Accessibility_ExternalAppsTab": "外部アプリタブ",
+  "Accessibility_Loading": "読み込み中"
 }
