--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Nepavyko nustatyti diegimo būsenos. Prisijunkite prie interneto ir spustelėkite mygtuką Atnaujinti.",
   "Error_NoInternetConnection": "Nėra interneto ryšio. Prisijunkite ir bandykite dar kartą.",
   "Error_WinGetInstallFailed": "Nepavyko įdiegti „WinGet“. Patikrinkite interneto ryšį.",
-  "Error_WinGetNotAvailable": "„WinGet“ šioje sistemoje nepasiekiama."
+  "Error_WinGetNotAvailable": "„WinGet“ šioje sistemoje nepasiekiama.",
+  "Accessibility_SaveConfiguration": "Išsaugoti konfigūraciją",
+  "Accessibility_ImportConfiguration": "Importuoti konfigūraciją",
+  "Accessibility_WindowsVersionFilter": "Windows versijos filtras",
+  "Accessibility_Donate": "Paaukoti",
+  "Accessibility_ReportBug": "Pranešti apie klaidą",
+  "Accessibility_MinimizeWindow": "Sumažinti langą",
+  "Accessibility_MaximizeWindow": "Padidinti langą",
+  "Accessibility_RestoreWindow": "Atkurti langą",
+  "Accessibility_CloseWindow": "Uždaryti langą",
+  "Accessibility_CloseDialog": "Uždaryti dialogą",
+  "Accessibility_SearchSettings": "Ieškoti nustatymų",
+  "Accessibility_ClearSearch": "Išvalyti paiešką",
+  "Accessibility_NavigateToSection": "Eiti į {0}",
+  "Accessibility_TaskProgress": "Vykdoma užduotis",
+  "Accessibility_CancelTask": "Atšaukti užduotį",
+  "Accessibility_SelectAll": "Pasirinkti viską",
+  "Accessibility_SelectApp": "Pasirinkti {0}",
+  "Accessibility_WindowsAppsTable": "Windows programų sąrašas",
+  "Accessibility_ExternalAppsTable": "Išorinių programų sąrašas",
+  "Accessibility_VisitWebsite": "Aplankyti {0} svetainę",
+  "Accessibility_ImportOwnConfig": "Importuoti savo konfigūracijos failą",
+  "Accessibility_ImportRecommendedConfig": "Importuoti rekomenduojamą konfigūraciją",
+  "Accessibility_UnlockSetting": "Atrakinti išplėstinį nustatymą",
+  "Accessibility_WindowsAppsTab": "Windows programų skirtukas",
+  "Accessibility_ExternalAppsTab": "Išorinių programų skirtukas",
+  "Accessibility_Loading": "Kraunama"
 }
