--- a/src/Winhance.WPF/Localization/lv.json
+++ b/src/Winhance.WPF/Localization/lv.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Nevar noteikt instalēšanas statusu. Izveidojiet savienojumu ar internetu un noklikšķiniet uz pogas Atsvaidzināt.",
   "Error_NoInternetConnection": "Nav interneta savienojuma. Lūdzu, izveidojiet savienojumu un mēģiniet vēlre.",
   "Error_WinGetInstallFailed": "Neizdevās instalēt WinGet. Lūdzu, pārbaudiet interneta savienojumu.",
-  "Error_WinGetNotAvailable": "WinGet šajā sistēmā nav pieejams."
+  "Error_WinGetNotAvailable": "WinGet šajā sistēmā nav pieejams.",
+  "Accessibility_SaveConfiguration": "Saglabāt konfigurāciju",
+  "Accessibility_ImportConfiguration": "Importēt konfigurāciju",
+  "Accessibility_WindowsVersionFilter": "Windows versijas filtrs",
+  "Accessibility_Donate": "Ziedot",
+  "Accessibility_ReportBug": "Ziņot par kļūdu",
+  "Accessibility_MinimizeWindow": "Minimizēt logu",
+  "Accessibility_MaximizeWindow": "Maksimizēt logu",
+  "Accessibility_RestoreWindow": "Atjaunot logu",
+  "Accessibility_CloseWindow": "Aizvērt logu",
+  "Accessibility_CloseDialog": "Aizvērt dialogu",
+  "Accessibility_SearchSettings": "Meklēt iestatījumus",
+  "Accessibility_ClearSearch": "Notīrīt meklēšanu",
+  "Accessibility_NavigateToSection": "Pāriet uz {0}",
+  "Accessibility_TaskProgress": "Uzdevums tiek izpildīts",
+  "Accessibility_CancelTask": "Atcelt uzdevumu",
+  "Accessibility_SelectAll": "Atlasīt visu",
+  "Accessibility_SelectApp": "Atlasīt {0}",
+  "Accessibility_WindowsAppsTable": "Windows lietotņu saraksts",
+  "Accessibility_ExternalAppsTable": "Ārējo lietotņu saraksts",
+  "Accessibility_VisitWebsite": "Apmeklēt {0} vietni",
+  "Accessibility_ImportOwnConfig": "Importēt savu konfigurācijas failu",
+  "Accessibility_ImportRecommendedConfig": "Importēt ieteicamo konfigurāciju",
+  "Accessibility_UnlockSetting": "Atbloķēt papildu iestatījumu",
+  "Accessibility_WindowsAppsTab": "Windows lietotņu cilne",
+  "Accessibility_ExternalAppsTab": "Ārējo lietotņu cilne",
+  "Accessibility_Loading": "Ielāde"
 }
