--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Não é possível determinar o status da instalação. Conecte-se à internet e clique no botão Atualizar.",
   "Error_NoInternetConnection": "Sem conexão com a internet. Por favor, conecte-se e tente novamente.",
   "Error_WinGetInstallFailed": "Falha ao instalar o WinGet. Verifique sua conexão com a internet.",
-  "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema."
+  "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema.",
+  "Accessibility_SaveConfiguration": "Salvar configuração",
+  "Accessibility_ImportConfiguration": "Importar configuração",
+  "Accessibility_WindowsVersionFilter": "Filtro de versão do Windows",
+  "Accessibility_Donate": "Doar",
+  "Accessibility_ReportBug": "Reportar um bug",
+  "Accessibility_MinimizeWindow": "Minimizar janela",
+  "Accessibility_MaximizeWindow": "Maximizar janela",
+  "Accessibility_RestoreWindow": "Restaurar janela",
+  "Accessibility_CloseWindow": "Fechar janela",
+  "Accessibility_CloseDialog": "Fechar diálogo",
+  "Accessibility_SearchSettings": "Pesquisar configurações",
+  "Accessibility_ClearSearch": "Limpar pesquisa",
+  "Accessibility_NavigateToSection": "Navegar para {0}",
+  "Accessibility_TaskProgress": "Tarefa em andamento",
+  "Accessibility_CancelTask": "Cancelar tarefa",
+  "Accessibility_SelectAll": "Selecionar tudo",
+  "Accessibility_SelectApp": "Selecionar {0}",
+  "Accessibility_WindowsAppsTable": "Lista de aplicativos Windows",
+  "Accessibility_ExternalAppsTable": "Lista de aplicativos externos",
+  "Accessibility_VisitWebsite": "Visitar o site de {0}",
+  "Accessibility_ImportOwnConfig": "Importar seu próprio arquivo de configuração",
+  "Accessibility_ImportRecommendedConfig": "Importar configuração recomendada",
+  "Accessibility_UnlockSetting": "Desbloquear configuração avançada",
+  "Accessibility_WindowsAppsTab": "Aba de aplicativos Windows",
+  "Accessibility_ExternalAppsTab": "Aba de aplicativos externos",
+  "Accessibility_Loading": "Carregando"
 }
