--- a/src/Winhance.WPF/Localization/pt.json
+++ b/src/Winhance.WPF/Localization/pt.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Não é possível determinar o estado da instalação. Ligue-se à internet e clique no botão Atualizar.",
   "Error_NoInternetConnection": "Sem ligação à internet. Por favor, ligue-se e tente novamente.",
   "Error_WinGetInstallFailed": "Falha ao instalar o WinGet. Verifique a sua ligação à internet.",
-  "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema."
+  "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema.",
+  "Accessibility_SaveConfiguration": "Guardar configuração",
+  "Accessibility_ImportConfiguration": "Importar configuração",
+  "Accessibility_WindowsVersionFilter": "Filtro de versão do Windows",
+  "Accessibility_Donate": "Doar",
+  "Accessibility_ReportBug": "Reportar um erro",
+  "Accessibility_MinimizeWindow": "Minimizar janela",
+  "Accessibility_MaximizeWindow": "Maximizar janela",
+  "Accessibility_RestoreWindow": "Restaurar janela",
+  "Accessibility_CloseWindow": "Fechar janela",
+  "Accessibility_CloseDialog": "Fechar diálogo",
+  "Accessibility_SearchSettings": "Pesquisar definições",
+  "Accessibility_ClearSearch": "Limpar pesquisa",
+  "Accessibility_NavigateToSection": "Navegar para {0}",
+  "Accessibility_TaskProgress": "Tarefa em progresso",
+  "Accessibility_CancelTask": "Cancelar tarefa",
+  "Accessibility_SelectAll": "Selecionar tudo",
+  "Accessibility_SelectApp": "Selecionar {0}",
+  "Accessibility_WindowsAppsTable": "Lista de aplicações Windows",
+  "Accessibility_ExternalAppsTable": "Lista de aplicações externas",
+  "Accessibility_VisitWebsite": "Visitar o website de {0}",
+  "Accessibility_ImportOwnConfig": "Importar o seu ficheiro de configuração",
+  "Accessibility_ImportRecommendedConfig": "Importar configuração recomendada",
+  "Accessibility_UnlockSetting": "Desbloquear definição avançada",
+  "Accessibility_WindowsAppsTab": "Separador de aplicações Windows",
+  "Accessibility_ExternalAppsTab": "Separador de aplicações externas",
+  "Accessibility_Loading": "A carregar"
 }
