--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Невозможно определить статус установки. Подключитесь к Интернету и нажмите кнопку Обновить.",
   "Error_NoInternetConnection": "Нет подключения к Интернету. Пожалуйста, подключитесь и попробуйте снова.",
   "Error_WinGetInstallFailed": "Не удалось установить WinGet. Пожалуйста, проверьте подключение к Интернету.",
-  "Error_WinGetNotAvailable": "WinGet недоступен в этой системе."
+  "Error_WinGetNotAvailable": "WinGet недоступен в этой системе.",
+  "Accessibility_SaveConfiguration": "Сохранить конфигурацию",
+  "Accessibility_ImportConfiguration": "Импортировать конфигурацию",
+  "Accessibility_WindowsVersionFilter": "Фильтр версии Windows",
+  "Accessibility_Donate": "Пожертвовать",
+  "Accessibility_ReportBug": "Сообщить об ошибке",
+  "Accessibility_MinimizeWindow": "Свернуть окно",
+  "Accessibility_MaximizeWindow": "Развернуть окно",
+  "Accessibility_RestoreWindow": "Восстановить окно",
+  "Accessibility_CloseWindow": "Закрыть окно",
+  "Accessibility_CloseDialog": "Закрыть диалог",
+  "Accessibility_SearchSettings": "Поиск настроек",
+  "Accessibility_ClearSearch": "Очистить поиск",
+  "Accessibility_NavigateToSection": "Перейти к {0}",
+  "Accessibility_TaskProgress": "Задача выполняется",
+  "Accessibility_CancelTask": "Отменить задачу",
+  "Accessibility_SelectAll": "Выбрать все",
+  "Accessibility_SelectApp": "Выбрать {0}",
+  "Accessibility_WindowsAppsTable": "Список приложений Windows",
+  "Accessibility_ExternalAppsTable": "Список внешних приложений",
+  "Accessibility_VisitWebsite": "Посетить сайт {0}",
+  "Accessibility_ImportOwnConfig": "Импортировать собственный файл конфигурации",
+  "Accessibility_ImportRecommendedConfig": "Импортировать рекомендуемую конфигурацию",
+  "Accessibility_UnlockSetting": "Разблокировать расширенную настройку",
+  "Accessibility_WindowsAppsTab": "Вкладка приложений Windows",
+  "Accessibility_ExternalAppsTab": "Вкладка внешних приложений",
+  "Accessibility_Loading": "Загрузка"
 }
