--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -1402,5 +1402,31 @@
   "ExternalApps_WinGetUnavailable": "Installationsstatus kann nicht ermittelt werden. Verbinden Sie sich mit dem Internet und klicken Sie auf die Schaltfläche Aktualisieren.",
   "Error_NoInternetConnection": "Keine Internetverbindung. Bitte verbinden Sie sich und versuchen Sie es erneut.",
   "Error_WinGetInstallFailed": "WinGet konnte nicht installiert werden. Bitte überprüfen Sie Ihre Internetverbindung.",
-  "Error_WinGetNotAvailable": "WinGet ist auf diesem System nicht verfügbar."
+  "Error_WinGetNotAvailable": "WinGet ist auf diesem System nicht verfügbar.",
+  "Accessibility_SaveConfiguration": "Konfiguration speichern",
+  "Accessibility_ImportConfiguration": "Konfiguration importieren",
+  "Accessibility_WindowsVersionFilter": "Windows-Versionsfilter",
+  "Accessibility_Donate": "Spenden",
+  "Accessibility_ReportBug": "Fehler melden",
+  "Accessibility_MinimizeWindow": "Fenster minimieren",
+  "Accessibility_MaximizeWindow": "Fenster maximieren",
+  "Accessibility_RestoreWindow": "Fenster wiederherstellen",
+  "Accessibility_CloseWindow": "Fenster schließen",
+  "Accessibility_CloseDialog": "Dialog schließen",
+  "Accessibility_SearchSettings": "Einstellungen suchen",
+  "Accessibility_ClearSearch": "Suche löschen",
+  "Accessibility_NavigateToSection": "Navigieren zu {0}",
+  "Accessibility_TaskProgress": "Aufgabe wird ausgeführt",
+  "Accessibility_CancelTask": "Aufgabe abbrechen",
+  "Accessibility_SelectAll": "Alle auswählen",
+  "Accessibility_SelectApp": "{0} auswählen",
+  "Accessibility_WindowsAppsTable": "Windows-Apps-Liste",
+  "Accessibility_ExternalAppsTable": "Externe Apps-Liste",
+  "Accessibility_VisitWebsite": "Website von {0} besuchen",
+  "Accessibility_ImportOwnConfig": "Eigene Konfigurationsdatei importieren",
+  "Accessibility_ImportRecommendedConfig": "Empfohlene Konfiguration importieren",
+  "Accessibility_UnlockSetting": "Erweiterte Einstellung entsperren",
+  "Accessibility_WindowsAppsTab": "Windows-Apps-Registerkarte",
+  "Accessibility_ExternalAppsTab": "Externe Apps-Registerkarte",
+  "Accessibility_Loading": "Wird geladen"
 }
